add %pyproject_save_files macro
This macro save generates file section to %pyproject_files. It should
simplify %files section and allow to build by some automatic machinery

supposed use case:
    %install
    %pyproject_install
    %pyproject_save_files requests _requests

    %files -n python3-requests -f %{pyproject_files}
    %doc README.rst
    %license LICENSE

automatic rebuild of packages:
    %install
    %pyproject_install
    %pyproject_save_files * +bindir // save all modules with executables

    %files -n python3-requests -f %{pyproject_files}

--- a/tests/tests.yml
+++ b/tests/tests.yml
@@ -31,6 +31,18 @@
     - openqa_client:
         dir: .
         run: ./mocktest.sh python-openqa_client
+    - kerberos:
+        dir: .
+        run: ./mocktest.sh python-kerberos
+    - ldap:
+        dir: .
+        run: ./mocktest.sh python-ldap
+    - isort:
+        dir: .
+        run: ./mocktest.sh python-isort
+    - mistune:
+        dir: .
+        run: ./mocktest.sh python-kerberos
     required_packages:
     - mock
     - rpmdevtools
